--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
         <h2>Portfolio</h2>
         <p></p>
       </div>
+
+      <div id="contact">
+        <h2>Contact</h2>
+      </div>
       <script>
       function openNav() {
         document.getElementById("mySidenav").style.width = "250px";
